# gdg-fsc-weekly-technical-25-26

./: README.md
projects/ai-study-workflow/: .gitignore  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  setup.sh
projects/ai-study-workflow/backups/: .gitkeep
projects/ai-study-workflow/config/: .env.example  docker-compose.yml
projects/ai-study-workflow/database/: SETUP_COMPLETE.md  schema.sql
projects/ai-study-workflow/docs/: DEPLOYMENT.md  POSTGRESQL_SETUP.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md  WORKFLOWS.md  WORKSHOP_GUIDE.md  WORKSHOP_IMPROVEMENTS.md
projects/ai-study-workflow/scripts/: 01-setup-gcloud.sh  02-create-project.sh  03-setup-database.sh  04-deploy-n8n.sh  backup.sh  cleanup.sh  common.sh  deploy.sh  diagnose.sh  monitor.sh
projects/ai-study-workflow/workflows/: README.md  note-taking.json  practice-problem-finder.json  quiz-generator.json  research-helper.json  schedule-manager.json  study-assistant.json  web-search.json
projects/gemma_ocr/: LICENSE  Makefile  README.md  pyproject.toml
projects/gemma_ocr/docs/: mkdocs.yml
projects/gemma_ocr/docs/docs/: index.md
projects/gemma_ocr/gemma_ocr/: __init__.py  dataset.py  features.py  plots.py
projects/gemma_ocr/gemma_ocr/modeling/: predict.py  train.py
